--- a/Final Project/Tequila.html
+++ b/Final Project/Tequila.html
@@ -7,10 +7,10 @@
 
     <nav>
         <ul>
-            <li><a id="homelink" href="FINAL.html">Home</a></li>
-            <li><a href="Whiskey.html">Whiskey</a></li>
-            <li><a href="Vodka.html">Vodka</a></li>
-            <li><a class="currentPage" href="Tequila.html">Tequila</a></li>
+            <li class="topbar"><a id="homelink" href="FINAL.html">Home</a></li>
+            <li class="topbar"><a href="Whiskey.html">Whiskey</a></li>
+            <li class="topbar"><a href="Vodka.html">Vodka</a></li>
+            <li id="currentPage"class="topbar"><a class="currentPage" href="Tequila.html">Tequila</a></li>
          </ul> 
     </nav>
 
