--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -7,10 +7,10 @@
 
     <nav>
         <ul class="topbar">
-            <li><a id="homelink" href="FINAL.html">Home</a></li>
-            <li><a class="currentPage" href="Whiskey.html">Whiskey</a></li>
-            <li><a href="vodka.html">Vodka</a></li>
-            <li><a href="Tequila.html">Tequila</a></li>
+            <li class="topbar"><a id="homelink" href="FINAL.html">Home</a></li>
+            <li id="currentPage"class="topbar"><a class="currentPage" href="Whiskey.html">Whiskey</a></li>
+            <li class="topbar"><a href="vodka.html">Vodka</a></li>
+            <li class="topbar"><a href="Tequila.html">Tequila</a></li>
          </ul> 
     </nav>
 
