--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -34,24 +34,51 @@
     </div>
 
     <!--Adds collapsible button-->
-    <button type="button" class="collapsible">
-        Whiskey Sour
-    </button>
-    <div class="content">
+    <div class = "buttons">
 
-        <!--  vvv AND HERE  vvv-->
-        <img class="drinkPicture" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
-        <ul class="ingredients">
-            <div class="ingredients">
-            <li>2oz. Bourbon</li>
-            <li>1 Egg White</li>
-            <li></li>
+        <div id = "b1">
+            <button type="button" class="collapsible">
+                Whiskey Sour
+            </button>
+            <div class="content">
+
+                <!--  vvv AND HERE  vvv-->
+                <img class="drinkPicture" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
+                <ul class="ingredients">
+                    <div class="ingredients">
+                    <li>2oz. Bourbon</li>
+                    <li>1 Egg White</li>
+                    <li></li>
+                    </div>
+                </ul>
+                <p>
+                    asdgasdlui
+                </p>
+
             </div>
-        </ul>
-        <p>
-            asdgasdlui
-        </p>
+        </div>
 
+        <div id = "b2">
+            <button type="button" class="collapsible">
+                Whiskey Sour
+            </button>
+            <div class="content">
+
+                <!--  vvv AND HERE  vvv-->
+                <img class="drinkPicture" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
+                <ul class="ingredients">
+                    <div class="ingredients">
+                    <li>2oz. Bourbon</li>
+                    <li>1 Egg White</li>
+                    <li></li>
+                    </div>
+                </ul>
+                <p>
+                    asdgasdlui
+                </p>
+
+            </div>
+        </div>
     </div>
     
 
