Non-homepage layouts & content

--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -16,9 +16,19 @@
 
     <div class="upper">
 
-        <img src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
-        <img src="./whiskey2.png" alt="Whiskey" align="right" height="30%"/>
+        <img class = "upperImage" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
+        <img class = "upperImage" src="./whiskey2.png" alt="Whiskey" align="right" height="30%"/>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
+            ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, 
+            tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
+            ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est
+            et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
+            commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt 
+            condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec
+            non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque 
+            id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu 
+            erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, 
+            facilisis luctus, metus Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
             ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, 
             tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
             ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est
@@ -43,17 +53,32 @@
             <div class="content">
 
                 <!--  vvv AND HERE  vvv-->
-                <img class="drinkPicture" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
+                <img class="drinkPicture" src="./whiskeysour.png" alt="Whiskey" align="left" height="25%"/>
+                <div class = "ingOverIns">
                 <ul class="ingredients">
                     <div class="ingredients">
                     <li>2oz. Bourbon</li>
                     <li>1 Egg White</li>
-                    <li></li>
+                    <li>0.75oz Lemon Juice</li>
+                    <li>0.5oz Simple Syrup</li>
                     </div>
                 </ul>
-                <p>
-                    asdgasdlui
+                <p class = "instructions">
+                    Mix all ingredients <b>except the egg white</b> in the shaker. In the other part of the shaker, crack in the egg white.
+                    combine the two and dry shake thoroughly for a nice foam. Now gently add ice and lightly shake to seal the shaker, then
+                    really start shaking to increase the foam. Strain through a hawthorne strainer into a <em class = "glass">coupe glass</em>, and garnish with
+                    <em class = "garnish">3 dashes angostura bitters.</em>
                 </p>
+                </div>
+                <p class = "drinkInfo">
+                    The whiskey sour is an early drink, which first appeared in lkasdf by alk;sdf in 10935. But it's believed to have variants far
+                    before that, which originated out on sea. in 1324, a common concern of sailors everywhere was scurvy, which could anasd and asdgh and cause
+                    asdlg. It comes as a result of a lack of vitamin d, which is plentiful in citrus. Of course, downing lemons wasn't to any sailors'
+                    liking. So, the citrus was combined with whiskey, because a shot of whiskey helps the medicine go down. 
+                    This original version doesn't actually include an egg white- the addition of an egg white came later, and technically makes it
+                    a boston sour- but when people say whiskey sour, it's commonly accepted that this means with the white.
+                </p>
+
 
             </div>
         </div>
@@ -73,7 +98,7 @@
                     <li></li>
                     </div>
                 </ul>
-                <p>
+                <p class = "instructions">
                     asdgasdlui
                 </p>
 
