Beginning adding images

--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -15,30 +15,24 @@
     </nav>
 
     <div class="upper">
-
-        <img class = "upperImage" src="./whiskey1.png" alt="Whiskey" align="left" height="25%"/>
+        
+        <img class = "upperImage" src="./whiskey.png" alt="Whiskey" align="left" height="25%"/>
         <img class = "upperImage" src="./whiskey2.png" alt="Whiskey" align="right" height="30%"/>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
-            ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, 
-            tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est
-            et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
-            commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt 
-            condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec
-            non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque 
-            id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu 
-            erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, 
-            facilisis luctus, metus Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
-            ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, 
-            tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est
-            et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, 
-            commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt 
-            condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec
-            non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque 
-            id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu 
-            erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, 
-            facilisis luctus, metus
+        <h3>Whiskey</h3>
+        <p class = "upperPar"><em class = "upperDrinkInfo">The History of Whisky:</em>In the 11th century, Celtic monks brought the art of distillation
+            to Ireland, and they really only made wine. But on this island, it simply wasn't 
+            possible to grow. They had to be content with beer made from fermented barley, and by
+            1494, Whisky was first mentioned in a Scottish document. The first documented distillery
+            was Bushmills in Ireland, in 1608. When the French wine supply was halved by pests
+            in the late 18th century, the Scots were cut off from buying any. But one Scotsman had 
+            an idea: Why not store Whisky in sherry casks like cognac? The new concept was a major
+            success, and led Whisky to the rest of the world. Today, it's well known as one 
+            of the most popular liquors to both mix and enjoy on it's own all around the world, 
+            being used in many of the best drinks ever made, some of which are listed below.<em class = "upperDrinkInfo">What's
+            the difference between Whiskey and Whisky?</em> There are a couple reasons why the
+            different spellings came to be, but today, it's just where the drink is from.
+            In the USA and Ireland, it's Whiskey. In Scotland and Canada, it's Whisky. Throughout
+            this page, they're used often interchangeably.
         </p>
 
     </div>
