Making it not look like shit as much
Adding images more

--- a/Final Project/FINAL.html
+++ b/Final Project/FINAL.html
@@ -114,8 +114,9 @@
 
             <!--Syrups-->
             <div id="syrups" class="right">
+                <img src="./images/syrups.png" height="70px" align="right">
                 <h2>Syrups</h2>
-
+                    
                     <button type="button" class="collapsibleSyrup">
                         + Simple Syrup
                     </button>
@@ -160,11 +161,13 @@
             <!--Mixing-->
             <div id="mixing" class="right">
                 <h2>Why James Bond Sucks</h2>
+                <img src="./images/bond.png" height="150px" align="right">
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames 
                 ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, 
                 tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
                 ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est
                 et sapien ullamcorper pharetra.</p>
+                
             </div>
 
             <!--Resources-->
