--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -16,8 +16,8 @@
 
     <div class="upper">
         
-        <img class = "upperImage" src="./whiskey.png" alt="Whiskey" align="left" height="25%"/>
-        <img class = "upperImage" src="./whiskey2.png" alt="Whiskey" align="right" height="30%"/>
+        <img class = "upperImage" src="./images/whiskey.png" alt="Whiskey" align="left" height="25%"/>
+        <img class = "upperImage" src="./images/woodford.png" alt="Whiskey" align="right" height="20%"/>
         <h3>Whiskey</h3>
         <p class = "upperPar"><em class = "upperDrinkInfo">The History of Whisky:</em>In the 11th century, Celtic monks brought the art of distillation
             to Ireland, and they really only made wine. But on this island, it simply wasn't 
@@ -46,7 +46,7 @@
             </button>
             <div class="content">
 
-                <img class="drinkPicture" src="./whiskeysour.png" alt="Whiskey" align="left" height="25%"/>
+                <img class="drinkPicture" src="./images/whiskeysour.png" alt="Whiskey" align="left" height="25%"/>
                 <div class = "ingOverIns">
                     <ul class="ingredients">
                         <div class="ingredients">
@@ -85,7 +85,7 @@
                 Old Fashioned
             </button>
             <div class="content">
-                <img class="drinkPicture" src="./oldfashioned1.png" alt="Whiskey" align="left" height="25%"/>
+                <img class="drinkPicture" src="./images/oldfashioned1.png" alt="Whiskey" align="left" height="25%"/>
                 <div class="ingOverIns">
                     <ul class="ingredients">
                         <div class="ingredients">
