--- a/Final Project/FINAL.html
+++ b/Final Project/FINAL.html
@@ -11,6 +11,7 @@
             <li class="topbar"><a href="Whiskey.html">Whiskey</a></li>
             <li class="topbar"><a href="vodka.html">Vodka</a></li>
             <li class="topbar"><a href="Tequila.html">Tequila</a></li>
+            <li class="topbar"><a href="Gin.html">Gin</a></li>
         </ul> 
     </nav>
 
@@ -181,9 +182,8 @@
             <div id="resources" class="right">
                 <h2>Good Resources</h2>
                 <ul>
-                    <li><a class="resourceLinks"href="https://whisky.com">Whisky.com</a></li>
-                    <li>Vestibulum tortor quam, feugiat vitae, ultricies eget, 
-                        tempor sit amet, ante.</li>
+                    <li><a class="resourceLinks"target="_blank"href="https://whisky.com">Whisky.com</a></li>
+                    <li><a class="resourceLinks"target="_blank"href="https://www.liquor.com/">Liquor.com</a></li>
                     <li>Donec eu libero sit amet quam egestas semper. Aenean
                         ultricies mi vitae est.</li>
                     <li>Mauris placerat eleifend leo. Quisque sit amet est
