--- a/Final Project/Vodka.html
+++ b/Final Project/Vodka.html
@@ -11,6 +11,7 @@
             <li class="topbar"><a class="currentPage" href="Whiskey.html">Whiskey</a></li>
             <li id="currentPage" class="topbar"><a href="vodka.html">Vodka</a></li>
             <li class="topbar"><a href="Tequila.html">Tequila</a></li>
+            <li class="topbar"><a href="Gin.html">Gin</a></li>
          </ul> 
     </nav>
 
@@ -80,33 +81,38 @@
         <!--Old Fashioned-->
         <div class = "buttonSort">
             <button type="button" class="collapsible">
-                Old Fashioned
+                Moscow Mule
             </button>
             <div class="content">
-                <img class="drinkPicture" src="./images/oldfashioned1.png" alt="Whiskey" align="left" height="25%"/>
+                <img class="drinkPicture" src="./images/moscowmule.png" alt="Whiskey" align="left" height="25%"/>
                 <div class="ingOverIns">
                     <ul class="ingredients">
                         <div class="ingredients">
-                        <li>2oz. Bourbon</li>
-                        <li>1 Sugar Cube</li>
-                        <li>3 Dashes Angostura Bitters</li>
+                        <li>2oz. Vodka</li>
+                        <li>0.5oz. Lime</li>
+                        <li>6oz ginger beer (fill glass)</li>
                         <li></li>
                         </div>
                     </ul>
                     <p class = "instructions">
-                        Muddle sugar into bitters. Simple syrup can be used in place of sugar
-                        cube if desired. A splash of highly carbonated water can help. Add bourbon
-                        with a big rock and stir just enough. Garnish with <em class = "garnish">rabbits
-                        ears garnish</em>.
+                        Mix well in a <em class="glass">copper mule mug</em> and add plenty of ice.
+                        Garnish with <em class = "garnish">
+                        a lime wedge</em>.
                         </em>
                     </p>
                 </div>
                 <p class = drinkInfo>
-                    The old fashioned is one of the earliest drinks ever conceived, and to this day is the most popular drink ever. When mixed drinks were
-                    first being made, the word cocktail really only meant a spirit, bitters and sugar, and that's what this is. It's spawned many variants, 
-                    being such a simple starting point, and even the garnish is disputed. It's often garnished with just an orange twist, but I prefer rabbits ears,
-                    which is both a lemon and orange slice. Some people smoke the glass, some light the twists, and of course everybody has their whiskey preference,
-                    but most old fashioneds are made with some type of bourbon.
+                    The moscow mule is a popular vodka drink, which helped introduce
+                    more vodka to the states. It was invented in 1941, and a couple people
+                    lay claim to it's creation. John G. Martin, an exec and marketer
+                    at Heublein drinks company (who had recently acquired smirnoff), 
+                    claimed that he and Jack Morgan made it (the owner of the Los
+                    Angeles British pub Cock n' Bull). However, the head bartender of
+                    the club, Wes Prince, says he made the original, which is a bit more believable.
+                    Prince said he just wanted to "clean out the basement", as the bar
+                    had too much ginger beer and vodka wasn't selling well either. 
+                    Another notable fact Morgan's girlfriend owned a company that made
+                    copper products, thus leading to the copper mugs we now know.
                 </p>
 
             </div>
