--- a/Final Project/Whiskey.html
+++ b/Final Project/Whiskey.html
@@ -11,6 +11,7 @@
             <li id="currentPage"class="topbar"><a class="currentPage" href="Whiskey.html">Whiskey</a></li>
             <li class="topbar"><a href="vodka.html">Vodka</a></li>
             <li class="topbar"><a href="Tequila.html">Tequila</a></li>
+            <li class="topbar"><a href="Gin.html">Gin</a></li>
          </ul> 
     </nav>
 
