--- a/Final Project/Gin.html
+++ b/Final Project/Gin.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Tequila Drinks</title>
+    <title>Whiskey Drinks</title>
     <link rel="stylesheet" type="text/css" href="FINAL.css">
 </head>
 
@@ -8,18 +8,18 @@
     <nav>
         <ul class="topbar">
             <li class="topbar"><a id="homelink" href="FINAL.html">Home</a></li>
-            <li class="topbar"><a href="Whiskey.html">Whiskey</a></li>
+            <li class="topbar"><a class="currentPage" href="Whiskey.html">Whiskey</a></li>
             <li class="topbar"><a href="vodka.html">Vodka</a></li>
-            <li id="currentPage"class="topbar"><a href="Tequila.html">Tequila</a></li>
-            <li class="topbar"><a href="Gin.html">Gin</a></li>
+            <li class="topbar"><a href="Tequila.html">Tequila</a></li>
+            <li id="currentPage"class="topbar"><a href="Gin.html">Gin</a></li>
          </ul> 
     </nav>
 
     <div class="upper">
         
-        <img class = "upperImage" src="./images/tequila.png" alt="Whiskey" align="left" height="25%"/>
-        <img class = "upperImage" src="./images/patron.png" alt="Whiskey" align="right" height="22%"/>
-        <h3>Tequila</h3>
+        <img class = "upperImage" src="./images/gin.png" alt="Whiskey" align="left" height="25%"/>
+        <img class = "upperImage" src="./images/plymouth.png" alt="Whiskey" align="right" height="20%"/>
+        <h3>Whiskey</h3>
         <p class = "upperPar"><em class = "upperDrinkInfo">The History of Whisky:</em>In the 11th century, Celtic monks brought the art of distillation
             to Ireland, and they really only made wine. But on this island, it simply wasn't 
             possible to grow. They had to be content with beer made from fermented barley, and by
@@ -43,35 +43,37 @@
 
         <div class = "buttonSort">
             <button type="button" class="collapsible">
-                Screwdriver
+                Whiskey Sour
             </button>
             <div class="content">
 
-                <img class="drinkPicture" src="./images/screwdriver.png" alt="Whiskey" align="left" height="25%"/>
+                <img class="drinkPicture" src="./images/whiskeysour.png" alt="Whiskey" align="left" height="25%"/>
                 <div class = "ingOverIns">
                     <ul class="ingredients">
                         <div class="ingredients">
-                        <li>2oz. Vodka</li>
-                        <li>Orange Juice</li>
+                        <li>2oz. Bourbon</li>
+                        <li>1 Egg White</li>
+                        <li>0.75oz Lemon Juice</li>
+                        <li>0.5oz Simple Syrup</li>
                         </div>
                     </ul>
                     <p class = "instructions">
-                        Easy as can be- put them in a nice cold glass with some ice, filling the glass with orange
-                        juice. Feel free to garnish with 
-                        <em class = "garnish">an orange wedge or wheel.</em>
+                        Mix all ingredients <b>except the egg white</b> in the shaker. In the other part of the shaker, crack in the egg white.
+                        combine the two and dry shake thoroughly for a nice foam. Now gently add ice and lightly shake to seal the shaker, then
+                        really start shaking to increase the foam. Strain through a hawthorne strainer into a <em class = "glass">coupe glass</em>, and garnish with
+                        <em class = "garnish">3 dashes angostura bitters.</em>
                     </p>
                 </div>
                 <p class = "drinkInfo">
-                    The screwdriver was one of the first recorded cocktails made with vodka,
-                    and similar to other early drinks, wasn't made in a bar.There are many 
-                    potential stories for how the drink came about. One says it was made by 
-                    American oil workers in the Persian gulf in the middle of the 20th century.
-                    While working, they wanted a drink. So, they added some Vodka to their 
-                    orange juice, and stir it with a screwdriver as that's what they had on hand.
-                    Another possibility is that it was made by American marines during WW2,
-                    while other stories say it was invented by Turkish intelligence agents, Balkan
-                    refugees and American engineers in the Park Hotel. However it came to be, it's 
-                    now enjoyed as one of the easiest go-to drinks there is.
+                    The whiskey sour is an early drink, which first appeared in lkasdf by alk;sdf in 10935. But it's believed to have variants far
+                    before that, which originated out on sea. in 1324, a common concern of sailors everywhere was scurvy, which could anasd and asdgh and cause
+                    asdlg. It comes as a result of a lack of vitamin d, which is plentiful in citrus. Of course, downing lemons wasn't to any sailors'
+                    liking. So, the citrus was combined with whiskey, because a shot of whiskey helps the medicine go down. 
+                    This original version doesn't actually include an egg white- the addition of an egg white came later, and technically makes it
+                    a boston sour- but when people say whiskey sour, it's commonly accepted that this means with the white. So, the citrus was combined with 
+                    whiskey, because a shot of whiskey helps the medicine go down. 
+                    This original version doesn't actually include an egg white- the addition of an egg white came later, and technically makes it
+                    a boston sour- but when people say whiskey sour, it's commonly accepted that this means with the white.
                 </p>
 
             </div>
