--- a/Final Project/FINAL.html
+++ b/Final Project/FINAL.html
@@ -26,6 +26,7 @@
 
         <div id="measurements" class="left">
             <h2>Measurement Conversions</h2>
+            <img src="./images/shaking.png" align="right" height="200px">
             <p>1oz = 30mL</p>
             <p>1oz = 2tbsp</p>
             <p>1oz = 6tsp</p>
@@ -39,25 +40,27 @@
                 <ul class = categoryList>
                     <li>Summer drinks tend to be more fruity, citrusy and refreshing.</li>
                     <li>Winter drinks are made to warm you up and feel nice and cozy.</li>
-                    <li>Fall drinks (like everything else) push the seasonal flavors and vibes,
-                        and halloween drinks are always fun.</li>
+                    <li>Fall drinks (like everything else) push the seasonal flavors and vibes.</li>
                     <li>Oh Spring, the boring season that doesn't have anything special.</li>
                 </ul>
-            <h3>By Lorem</h3>
+            <h3>For Holidays</h3>
                 <ul class="categoryList">
-                    <li>Vitae</li>
-                    <li>Ultricies</li>
-                    <li>Eget</li>
+                    <li>Halloween is super fun for spooky drinks. Try out dry ice and absinthe!</li>
+                    <li>Christmas has more than spiked eggnog. Play around with peppermints and chocolates.</li>
+                    <li>New Years- just add a bunch of booze.</li>
                 </ul>
-            <h3>By Ipsum</h3>
-            <h3>By Aliquam</h3>
+            <h3>By Size</h3>
+                <p>Drinks can range from shots/shooters at sometimes less than 1.5oz to massive
+                    drinks over 20oz. Plan accordingly!
+                </p>
+            <h3>By Flavors</h3>
                 <ul class="categoryList">
-                    <li>asdg</li>
-                    <li>asdg</li>
-                    <li>asdh</li>
-                    <li>apsdoih</li>
-                    <li>spohiy</li>
-                    <li>asdpogia</li>
+                    <li>Fruity drinks</li>
+                    <li>Citrusy drinks</li>
+                    <li>Refreshing drinks</li>
+                    <li>Alcohol-forward drinks</li>
+                    <li>Warm drinks</li>
+                    <li>Cold drinks</li>
                 </ul>
         </div>
         </div>
@@ -166,7 +169,7 @@
                 <img src="./images/bond.png" height="150px" align="right">
                 <p>Many of us are familiar with James Bond's drink of choice- a
                     vodka martini. Shaken, not stirred. It's a signature line,
-                    and it doesn't make a lot of sense. <em>there's an important 
+                    and it doesn't make a lot of sense. <em>There's an important 
                     difference between shaken and stirred drinks.</em> When a 
                     drink is shaken, it incorporates fluids of different consistency
                     well and sometimes adds foam, and often gets the drink colder
