--- a/Final Project/Vodka.html
+++ b/Final Project/Vodka.html
@@ -20,20 +20,25 @@
         <img class = "upperImage" src="./images/Vodka.png" alt="Whiskey" align="left" height="25%"/>
         <img class = "upperImage" src="./images/smirnoff.png" alt="Whiskey" align="right" height="17%"/>
         <h3>Vodka</h3>
-        <p class = "upperPar"><em class = "upperDrinkInfo">The History of Whisky:</em>In the 11th century, Celtic monks brought the art of distillation
-            to Ireland, and they really only made wine. But on this island, it simply wasn't 
-            possible to grow. They had to be content with beer made from fermented barley, and by
-            1494, Whisky was first mentioned in a Scottish document. The first documented distillery
-            was Bushmills in Ireland, in 1608. When the French wine supply was halved by pests
-            in the late 18th century, the Scots were cut off from buying any. But one Scotsman had 
-            an idea: Why not store Whisky in sherry casks like cognac? The new concept was a major
-            success, and led Whisky to the rest of the world. Today, it's well known as one 
-            of the most popular liquors to both mix and enjoy on it's own all around the world, 
-            being used in many of the best drinks ever made, some of which are listed below.<em class = "upperDrinkInfo">What's
-            the difference between Whiskey and Whisky?</em> There are a couple reasons why the
-            different spellings came to be, but today, it's just where the drink is from.
-            In the USA and Ireland, it's Whiskey. In Scotland and Canada, it's Whisky. Throughout
-            this page, they're used often interchangeably.
+        <p class = "upperPar"><em class = "upperDrinkInfo">The History of Vodka:</em>Vodka is one of
+            the oldest liquors ever produced, coming from the Russian word pronounced "voda", meaning water.
+            It's been said that it's been around as early as the 8th or 9th century, but it's agreed
+            that the first distillery was reported in the Vyatka Chronicle of 1174. Poland claims
+            to have distilled vodka even earlier than the 8th century, but it wasn't like the vodka
+            we know today. There in the cold eastern european winters, wine would be left out in the cold,
+            and the water and other substances in the wine would rise to the top and freeze, where
+            it could be scraped off, leaving a more pure drink behind. Though this process would make 
+            it more of a crude brandy. Later on, vodka was also commonly used for medicinal purposes, 
+            but it also became a more and more populat drink. Early production methods left
+            many impurities in the drink, and distillers would mask the taste with fruit, spices and herbs.
+            Then in the mid-15th century, pot distillation was introduced, and vodka began to ramp
+            up in production, and in 1716, owning distilleries became exclusive to the rich. At the time,
+            with these far and wide distilleries, the flavor of vodka wasn't standardized, with all 
+            different sorts of vodka and flavors. And in the 18th century, a professor came up with 
+            a way to purify alchohol with charcoal filtration. Finally, near the end of the 19th century,
+            the tastes and production techniques of vodka were more standardized. After the russian revolution, 
+            many vodka producers emigrated to the rest of europe, where it was spread further to america.
+            In the 1940s the drink achieved wider popularity.
         </p>
 
     </div>
